[package]
name = "chess"
version = "0.1.0"
authors = ["delskayn <mees.delzenne@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.6.0-rc1"
thiserror = "1.0"
anyhow = "1.0"
euclid = "0.22"
engine = {path =  "./engine"}
