[workspace]
members = [
    "chess_ui",
    "chess_core",
    "chess_mcts",
    "chess_alpha_beta",
    "chess_alpha_beta_2",
    "chess_alpha_beta_back",
    "chess_bot",
    "chess_uci",
    "chess_web/chess_front",
    "chess_web/chess_server",
    "find_magic",
]

[profile.release]
debug = true
