[package]
name = "chess_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
hyper = {version = "0.14.16", features=["full"]}
hyper-tls = "0.5.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.74"
tokio = {version = "1.15.0", features=["full"]}
tracing = "0.1.29"
tracing-subscriber = {version = "0.3.5", features=["env-filter"]}
urlencoding = "2.1.0"
futures-util = "0.3.19"
chess_core = {path = "../chess_core"}
