[package]
name = "chess_core"
version = "0.1.0"
authors = ["delskayn <mees.delzenne@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
anyhow = "1.0.38"

[dev-dependencies]
criterion = "0.3.4"


[[bench]]
name = "eval_moves"
harness = false

[[bench]]
name = "generate_moves_ply"
harness = false

[[bench]]
name = "generate_moves_single"
harness = false

[[bin]]
name = "perft"

[[bin]]
name = "auto_compare"
