[package]
name = "chess_uci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
chess_core = { path = "../chess_core/" }
chess_alpha_beta_2 = { path = "../chess_alpha_beta_2/" }
crossbeam-channel = "0.5.1"
rand = "0.8.4"
