[package]
name = "engine"
version = "0.1.0"
authors = ["Mees Delzenne <mees.delzenne@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"


[dev-dependencies]
criterion = {version = "0.3", features=["html_reports"]}

[[bench]]
name = "generate_moves_single"
harness = false

[[bench]]
name = "generate_moves_ply"
harness = false
