[package]
name = "chess_front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
chess_core = { version = "0.1.0", path = "../../chess_core" }
console_error_panic_hook = "0.1.7"
futures = "0.3.19"
getrandom = { version = "0.2.4", features = ["js"]}
js-sys = "0.3.56"
log = "0.4.14"
seed = "0.8.0"
serde = {version = "1.0.136",features = ["derive"]}
serde_json = "1.0.78"
serde_urlencoded = "0.7.1"
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"
wasm-logger = "0.2.0"


[dependencies.web-sys]
version = "0.3.56"
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'RequestCredentials',
    'Response',
    'Window',
]
