[package]
name = "chess_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
axum = {version = "0.5.11", features=["ws","headers","multipart"]}
serde = {version = "1.0.138", features=["derive"]}
sqlx = {version = "0.6.0", features = ["runtime-tokio-native-tls", "postgres","uuid","time"]}
tokio = {version = "1.19.2", features=["full"]}
dotenv = "0.15.0"
rand = "0.8.5"
argon2 = "0.4.1"
axum-macros = "0.2.3"
tracing-subscriber = {version = "0.3.14", features=["env-filter"]}
tracing = "0.1.35"
tower-http = {version = "0.3.4", features = ["fs","trace"]}
tower = "0.4.13"
hmac = "0.12.1"
futures = "0.3.21"
base64 = "0.13.0"
sha2 = "0.10.2"
anyhow = "1.0.58"
