[package]
name = "chess-move-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { package = "chess-common", version = "0.1.0", path = "../common" }

[dev-dependencies]
criterion = "0.5"


[[bench]]
name = "generate_moves_ply"
harness = false

[[bench]]
name = "generate_moves_single"
harness = false
