[package]
name = "chess-tournament"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
common = { version = "0.1.0", path = "../common", package = "chess-common" }
smol = "1.3.0"
uci = { version = "0.1.0", path = "../uci", package = "chess-uci" }
