[package]
name = "chess-ui"
version = "0.1.0"
edition = "2021"
authors = ["Mees Delzenne"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
common = { version = "0.1.0", path = "../common", package = "chess-common" }
ggez = "0.9.3"
move_gen = { version = "0.1.0", path = "../move_gen", package = "chess-move-gen" }
uci = { version = "0.1.0", path = "../uci", package = "chess-uci" }
