[package]
name = "engine-zero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
candle-core = { version = "0.3.2", features = ["cuda","cudnn"] }
candle-nn = { version = "0.3.2", features = ["cuda"] }
clap = { version = "4.4.13", features = ["derive"] }
common = { version = "0.1.0", path = "../../crates/common", package = "chess-common" }
ctrlc = "3.4.2"
file = { version = "0.1.0", path = "../../crates/file", package = "chess-file" }
indicatif = "0.17.7"
move_gen = { version = "0.1.0", path = "../../crates/move_gen", package = "chess-move-gen" }
rand = "0.8.5"
