[package]
name = "chess_uci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chess_core = { path = "../core/" }
#chess_alpha_beta_2 = { path = "../engines/alpha_beta_2/" }
crossbeam-channel = "0.5.6"
rand = "0.8.5"
