[package]
name = "chess_core"
version = "0.1.0"
authors = ["delskayn <mees.delzenne@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
anyhow = "1.0.66"
crossbeam-channel = "0.5.6"
thiserror = "1.0.37"
serde = { version = "1.0.150", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.4.0"

[features]
serde = ["dep:serde"]

[[bench]]
name = "generate_moves_ply"
harness = false

[[bench]]
name = "generate_moves_single"
harness = false

[[bin]]
name = "perft"

[[bin]]
name = "auto_compare"
