[package]
name = "chess_ui"
version = "0.1.0"
authors = ["delskayn <mees.delzenne@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.6"
ggez = { version = "0.8", default-features = false, features = ["audio"]}
thiserror = "1.0"
anyhow = "1.0"
euclid = "0.22"
rand = "0.8.5"
structopt = "0.3.26"
chess_core = {path =  "../core"}
#chess_mcts = { path = "../engines/mcts/" }
#chess_alpha_beta = { path = "../engines/alpha_beta/" }
#chess_alpha_beta_2 = { path = "../engines/alpha_beta_2/" }
