[package]
name = "chess_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
axum = {version = "0.6.1", features=["ws","headers","multipart","macros"]}
serde = {version = "1.0.150", features=["derive"]}
sqlx = {version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres","uuid","time"]}
tokio = {version = "1.23.0", features=["full"]}
dotenv = "0.15.0"
rand = "0.8.5"
argon2 = "0.4.1"
axum-macros = "0.3.0"
tracing-subscriber = {version = "0.3.16", features=["env-filter"]}
tracing = "0.1.37"
tower-http = {version = "0.3.5", features = ["fs","trace"]}
tower = "0.4.13"
hmac = "0.12.1"
futures = "0.3.25"
base64 = "0.20.0"
sha2 = "0.10.6"
anyhow = "1.0.66"
pin-project = "1.0.12"
chess_core = { version = "0.1.0", path = "../../core", features=["serde"] }
common = { version = "0.1.0", path = "../common", package="chess_web_common" }
tokio-util = { version = "0.7.4", features = ["codec"] }
bytes = "1.3.0"
serde_json = "1.0.89"
surrealdb = "1.0.0-beta.9"
