[package]
name = "chess_front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chess_core = { version = "0.1.0", path = "../../core" }
console_error_panic_hook = "0.1.7"
futures = "0.3.25"
getrandom = { version = "0.2.8", features = ["js"]}
gloo-net = { version = "0.2.5", features = ["http", "websocket"] }
js-sys = "0.3.60"
log = "0.4.17"
serde = {version = "1.0.150",features = ["derive"]}
serde_json = "1.0.89"
serde_urlencoded = "0.7.1"
sycamore = {version = "0.8.2", features=["suspense"]}
wasm-logger = "0.2.0"
common = { version = "0.1.0", path = "../common", package="chess_web_common" }
gloo-timers = { version = "0.2.5", features=["futures"]}


[dependencies.web-sys]
version = "0.3.60"
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'ReadableStream',
    'ReadableStreamDefaultReader',
    'RequestCredentials',
    'Response',
    'Window',
    'FileList',
    "File",
    'HtmlInputElement',
]
